project2/test/test_2_r03.out
Error type 3 at line 6: ttt variable is redefined in the same scope
