project2/test/test_2_r03.out2
Error type 3 at Line 6: ttt variable is redefined in the same scope
